--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,26 @@
-*
-{
-    box-sizing:border-box;
+* {
+    box-sizing: border-box;
 }
-body
-{
-    margin:0px;
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0px;
+}
+
+.primary {
+    height: 1350px;
+    width: 800px;
+    background-color: whitesmoke;
+    margin: 20px;
+
+}
+
+.details {
+    background-color: rgb(0, 137, 116);
+    padding: 20px;
+    text-align: center;
+    border-radius: 15px;
 }
