--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0px;
+    margin: 0;
 }
 
 .primary {
-    height: 1350px;
-    width: 800px;
+    height: 1250px;
+    width: 1000px;
     background-color: whitesmoke;
     margin: 20px;
 
@@ -20,7 +20,59 @@ body {
 
 .details {
     background-color: rgb(0, 137, 116);
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     border-radius: 15px;
+}
+
+#p1 {
+
+    font-size: 40px;
+    font-weight: bolder;
+}
+
+a {
+    color: white;
+    line-height: 1px;
+}
+
+h2 {
+    margin: 20px;
+    margin-bottom: 10px;
+    line-height: 0.5px;
+    font-size: 30px;
+}
+
+p {
+    margin: 20px;
+    font-size: 25px;
+}
+
+.main-section {
+    margin-left: 10px;
+    margin: 15px;
+}
+
+#p1 {
+    color: skyblue;
+}
+
+#p2 {
+    margin-bottom: 0px;
+}
+
+#p3 {
+    margin-top: 0px;
+}
+
+h2 {
+    background-color: rgb(0, 137, 116);
+    color: white;
+    padding: 15px;
+}
+
+li {
+    margin: 10px;
+    margin-left: 30px;
+    font-size: 25px;
 }
