--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,78 +1,86 @@
-* {
-    box-sizing: border-box;
-}
+    * {
+        box-sizing: border-box;
+    }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0px;
+    }
 
-.primary {
-    height: 1250px;
-    width: 1000px;
-    background-color: whitesmoke;
-    margin: 20px;
+    .primary {
+        height:100%;
+        width:100%;
+        max-width: 800px;
+        background-color: #f5f5f5;
+        margin: 20px;
+    }
 
-}
+    .details {
+        background-color: rgb(0, 137, 116);
+        padding: 15px;
+        text-align: center;
+        border-radius: 15px;
+    }
 
-.details {
-    background-color: rgb(0, 137, 116);
-    padding: 15px;
-    text-align: center;
-    border-radius: 15px;
-}
+    #p1 {
 
-#p1 {
+        font-size: 40px;
+        font-weight: bolder;
+    }
 
-    font-size: 40px;
-    font-weight: bolder;
-}
+    a {
+        color: red;
+        line-height: 1px;
+        font-size: 20px;
+    }
 
-a {
-    color: white;
-    line-height: 1px;
-}
+    a:hover {
+        color: blue;
+      }
 
-h2 {
-    margin: 20px;
-    margin-bottom: 10px;
-    line-height: 0.5px;
-    font-size: 30px;
-}
+    p {
+        margin: 20px;
+        font-size: 25px;
+    }
 
-p {
-    margin: 20px;
-    font-size: 25px;
-}
-
-.main-section {
-    margin-left: 10px;
-    margin: 15px;
-}
-
-#p1 {
+    h5{
+    margin:0px;
     color: skyblue;
-}
+    margin-bottom:15px;
+    }
 
-#p2 {
-    margin-bottom: 0px;
-}
+    #p1 {
+        color: black;
+        margin-bottom:0px;
+    }
 
-#p3 {
-    margin-top: 0px;
-}
+    #p2 {
+        margin-bottom: 0px;
+    }
 
-h2 {
-    background-color: rgb(0, 137, 116);
-    color: white;
-    padding: 15px;
-}
+    #p3 {
+        margin-top: 0px;
+    }
 
-li {
-    margin: 10px;
-    margin-left: 30px;
-    font-size: 25px;
-}
+    h2 {
+        margin-left: 10px;
+        margin: 15px;
+        background-color: rgb(0, 137, 116);
+        color: white;
+        padding: 15px;
+        flex: flex-shrink;
+        margin: 20px;
+        margin-bottom: 10px;
+        line-height: 0.5px;
+        font-size: 30px;
+    }
+
+    li {
+        margin: 10px;
+        margin-left: 30px;
+        font-size: 25px;
+    }
