--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,15 @@
     }
 
     .primary {
-        height:100%;
-        width:100%;
-        max-width: 800px;
+        height: 100%;
+        width: 100%;
+        max-width: 1000px;
         background-color: #f5f5f5;
         margin: 20px;
     }
 
     .details {
-        background-color: rgb(0, 137, 116);
+        background-color:blueviolet;
         padding: 15px;
         text-align: center;
         border-radius: 15px;
@@ -33,29 +33,30 @@
     }
 
     a {
-        color: red;
+        color: violet;
         line-height: 1px;
         font-size: 20px;
     }
 
     a:hover {
         color: blue;
-      }
+    }
 
     p {
         margin: 20px;
         font-size: 25px;
     }
 
-    h5{
-    margin:0px;
-    color: skyblue;
-    margin-bottom:15px;
+    h5 {
+        margin: 0px;
+        color:pink;
+        font-size:20px;
+        margin-bottom: 15px;
     }
 
     #p1 {
-        color: black;
-        margin-bottom:0px;
+        color: white;
+        margin-bottom: 0px;
     }
 
     #p2 {
@@ -67,16 +68,15 @@
     }
 
     h2 {
+        position:relative;
         margin-left: 10px;
         margin: 15px;
-        background-color: rgb(0, 137, 116);
-        color: white;
-        padding: 15px;
+        color: blue;
         flex: flex-shrink;
         margin: 20px;
         margin-bottom: 10px;
         line-height: 0.5px;
-        font-size: 30px;
+        font-size: 20px;
     }
 
     li {
