--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,79 @@
-    * {
-        box-sizing: border-box;
-    }
+* {
+    box-sizing: border-box;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0px;
+}
 
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0px;
-    }
+.primary {
+    height: 100%;
+    width: 50%;
+    background-color: #f5f5f5;
+    margin: 20px;
+}
 
-    .primary {
-        height: 100%;
-        width: 100%;
-        max-width: 1000px;
-        background-color: #f5f5f5;
-        margin: 20px;
-    }
+.details {
+    background-color:blueviolet;
+    padding: 55px;
+    text-align: center;
+    border-radius: 15px;
+}
 
-    .details {
-        background-color:blueviolet;
-        padding: 15px;
-        text-align: center;
-        border-radius: 15px;
-    }
+a {
+    color: violet;
+    line-height: 1px;
+    font-size: 40px;
+}
 
-    #p1 {
+a:hover {
+    color: blue;
+}
 
-        font-size: 40px;
-        font-weight: bolder;
-    }
+p {
+    margin: 20px;
+    font-size: 25px;
+}
 
-    a {
-        color: violet;
-        line-height: 1px;
-        font-size: 20px;
-    }
+h5 {
+    margin: 0px;
+    color:pink;
+    font-size:30px;
+    margin-bottom: 15px;
+}
 
-    a:hover {
-        color: blue;
-    }
+#p1 {
+    color: white;
+    margin-bottom: 0px;
+    font-size:40px;
+}
 
-    p {
-        margin: 20px;
-        font-size: 25px;
-    }
+#p2 {
+margin:20px;
+}
 
-    h5 {
-        margin: 0px;
-        color:pink;
-        font-size:20px;
-        margin-bottom: 15px;
-    }
+h2 {
+    position:relative;
+    margin-left: 10px;
+    margin: 15px;
+    color: blue;
+    flex: flex-shrink;
+    margin: 20px;
+    margin-bottom: 10px;
+    line-height: 0.5px;
+    font-size: 40px;
+}
 
-    #p1 {
-        color: white;
-        margin-bottom: 0px;
-    }
-
-    #p2 {
-        margin-bottom: 0px;
-    }
-
-    #p3 {
-        margin-top: 0px;
-    }
-
-    h2 {
-        position:relative;
-        margin-left: 10px;
-        margin: 15px;
-        color: blue;
-        flex: flex-shrink;
-        margin: 20px;
-        margin-bottom: 10px;
-        line-height: 0.5px;
-        font-size: 20px;
-    }
-
-    li {
-        margin: 10px;
-        margin-left: 30px;
-        font-size: 25px;
-    }
+li {
+    margin: 10px;
+    margin-left: 30px;
+    font-size: 40px;
+}
+.size
+{
+    font-size: 40px;
+}
